# Models

./: .gitignore  .gitmodules  Base.cbp  CONTRIBUTING.md  Cable.cpp  Cable.hpp  CableUnitLoadCalculator.cpp  CableUnitLoadCalculator.hpp  Catenary.cpp  Catenary.hpp  GNUmakefile  GeometricShapes.cpp  GeometricShapes.hpp  LoadCase_Weather.cpp  LoadCase_Weather.hpp  README  README.md  SupportLibrary.cpp  SupportLibrary.hpp  TransmissionLine.cbp  multilib.sln  tls_base.vcxproj  tls_base.vcxproj.filters  tls_transmissionline.vcxproj  tls_transmissionline.vcxproj.filters  transmission-line.cbp  transmission-line.depend  transmission-line.layout  transmissionline.cbp
check/: README.md  run-cpplint.sh  run-oclint.sh
docs/: README  README.md  config  doxyfile  doxygen_config
docs/html/: _cable_8h_source.html  _cable_load_case_8h_source.html  _cable_load_constraint_8h_source.html  _cable_unit_load_calculator_8h_source.html  _catenary_8h_source.html  _formulas.tex  _geometric_shapes_8h_source.html  _support_library_8h_source.html  _weather_load_case_8h_source.html  annotated.html  annotated.js  class_cable_unit_load_calculator-members.html  class_cable_unit_load_calculator.html  class_cable_unit_load_calculator.js  class_catenary2_d-members.html  class_catenary2_d.html  class_catenary2_d.js  class_catenary3_d-members.html  class_catenary3_d.html  class_catenary3_d.js  class_cylinder-members.html  class_cylinder.html  class_cylinder.js  class_shape-members.html  class_shape.html  class_shape.js  class_vector2_d-members.html  class_vector2_d.html  (+37 more)
include/: Cable.h  Cable.hpp  CableLoadCase.h  CableLoadConstraint.h  CableUnitLoadCalculator.h  CableUnitLoadCalculator.hpp  Catenary.h  Catenary.hpp  GeometricShapes.h  LoadCase_Weather.hpp  SupportFile.h  SupportLibrary.h  SupportLibrary.hpp  WeatherLoadCase.h
lib/: README.md
src/: Cable.cc  Cable.h  CableLoadCase.cc  CableLoadCase.h  CableLoadConstraint.cc  CableLoadConstraint.h  CableUnitLoadCalculator.cc  CableUnitLoadCalculator.cpp  Catenary.cc  Catenary.h  GeometricShapes.cc  GeometricShapes.cpp  SupportFile.cc  SupportLibrary.cc  SupportLibrary.cpp  SupportLibrary.h  WeatherLoadCase.cc  WeatherLoadCase.h
test/: CMakeLists.txt  README  README.md  factory.cc  factory.h  main.cc  test.cbp  test.cc  test.sln  test.vcxproj  test.vcxproj.filters  test.workspace
test/base/: geometric_shapes_test.cc  helper_test.cc  polynomial_test.cc  units_test.cc  vector_test.cc
test/sagging/: cable_sag_position_corrector_test.cc  dyno_sagger_test.cc  stopwatch_sagger_test.cc  transit_sagger_test.cc
test/sagtension/: cable_component_elongation_model_test.cc  cable_elongation_model_test.cc  cable_state_test.cc  cable_strainer_test.cc  catenary_cable_component_tension_solver_test.cc  catenary_cable_reloader_test.cc  catenary_cable_solver_test.cc  catenary_cable_test.cc  catenary_cable_unloader_test.cc  line_cable_loader_base_test.cc  line_cable_reloader_test.cc  line_cable_sagger_test.cc  line_cable_to_catenary_cable_converter_test.cc  line_cable_unloader_test.cc  sag_tension_cable_test.cc
test/thermalrating/: cable_heat_transfer_solver_test.cc  cable_heat_transfer_state_test.cc  solar_radiation_solver_test.cc  steady_cable_current_solver_test.cc  steady_cable_temperature_solver_test.cc  thermal_rating_cable_test.cc  thermal_rating_weather_test.cc  transient_cable_temperature_solver_test.cc
test/transmissionline/: alignment_test.cc  cable_attachment_equilibrium_solver_test.cc  cable_constraint_test.cc  cable_load_case_test.cc  cable_load_constraint_test.cc  cable_position_locator_test.cc  cable_test.cc  cable_unit_load_calculator_test.cc  cable_unit_load_solver_test.cc  catenary_solver_test.cc  catenary_test.cc  hardware_test.cc  line_cable_test.cc  line_cable_to_catenary_converter_test.cc  line_structure_test.cc  structure_test.cc  transmission_line_test.cc  weather_load_case_test.cc
(+186 files in other folders)
